@startuml ER_Part10_Analytics
title Часть 10. Статистика действий
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "AppActivityEvents" {
  RowId *
  EventCode
  ActorKind
  UserId
  EmployeeId
  WorkshopId
  CompanyId
  EntityType
  EntityId
  PayloadJson
  CreatedAt
}

entity "Users" {
  RowId *
  Login
  Password
  Description
  Email
  BirthDate
  Phone
  CreatedAt
}

entity "Employees" {
  RowId *
  FirstName
  LastName
  MidName
  Login
  Password
  Email
  Phone
  BirthDate
  HireDate
  IsActive
  Description
  WorkshopId
}

entity "Workshops" {
  RowId *
  Name
  CompanyId
  AddressId
  Description
  BusinessTypeId
}

entity "Companies" {
  RowId *
  Name
  Description
}

AppActivityEvents }o--|| Workshops : WorkshopId
AppActivityEvents }o--|| Employees : EmployeeId
AppActivityEvents }o--|| Users : UserId
AppActivityEvents }o--|| Companies : CompanyId
Employees }o--|| Workshops : WorkshopId
Workshops }o--|| Companies : CompanyId
@enduml
